[gd_scene load_steps=33 format=3 uid="uid://d1pd67sovoyon"]

[ext_resource type="Script" path="res://Scripts/CatPlayer.gd" id="1_i1tag"]
[ext_resource type="Texture2D" uid="uid://d4ecfr06d8w37" path="res://Assets/catattack1.png" id="2_dxdjh"]
[ext_resource type="Texture2D" uid="uid://cbjredmhnm3bv" path="res://Assets/Sprite-0002-Recovered1.png" id="2_m5cmp"]
[ext_resource type="Texture2D" uid="uid://du7vuo3n2r16i" path="res://Assets/Sprite-0002-Recovered2.png" id="3_h8567"]
[ext_resource type="Texture2D" uid="uid://kncy5kccarps" path="res://Assets/catattack2.png" id="3_uit08"]
[ext_resource type="Texture2D" uid="uid://bbtkpykgaalfa" path="res://Assets/catattack3.png" id="4_hyoct"]
[ext_resource type="Texture2D" uid="uid://btcm6n67yuee8" path="res://Assets/Sprite-0002-Recovered3.png" id="4_no411"]
[ext_resource type="Texture2D" uid="uid://vjvvu3wlt54a" path="res://Assets/catclimb1.png" id="5_w0qeo"]
[ext_resource type="Texture2D" uid="uid://n0lj1glwtly4" path="res://Assets/catclimb2.png" id="6_1imgx"]
[ext_resource type="Texture2D" uid="uid://cj3vhah3swojj" path="res://Assets/catdeath1.png" id="7_ymqox"]
[ext_resource type="Texture2D" uid="uid://ds8bvptbstloa" path="res://Assets/catdeath2.png" id="8_jmvr7"]
[ext_resource type="Texture2D" uid="uid://bsvm5xrfleone" path="res://Assets/catdeath3.png" id="9_1a5of"]
[ext_resource type="Texture2D" uid="uid://pmolhmocfrd2" path="res://Assets/catdeath4.png" id="10_ochq3"]
[ext_resource type="Texture2D" uid="uid://bmpvsgya6namw" path="res://Assets/catidle1.png" id="11_15wwq"]
[ext_resource type="Texture2D" uid="uid://dbi5nhgc74bng" path="res://Assets/catidle2.png" id="12_1dr3p"]
[ext_resource type="Texture2D" uid="uid://8unvtfsv4h5b" path="res://Assets/catjump1.png" id="13_wy3et"]
[ext_resource type="Texture2D" uid="uid://b8umi4prysqdr" path="res://Assets/catjump2.png" id="14_4bwki"]
[ext_resource type="Texture2D" uid="uid://lcewo6bcnnbd" path="res://Assets/catjump3.png" id="15_0yoff"]
[ext_resource type="Texture2D" uid="uid://m22mjastnpbb" path="res://Assets/catjump4.png" id="16_7mpp7"]
[ext_resource type="FontFile" uid="uid://cbqxfolwklsky" path="res://Assets/QuinqueFive.otf" id="20_xvdpg"]
[ext_resource type="Texture2D" uid="uid://ct7dx67yam2db" path="res://Assets/watertub.png" id="21_pyxd7"]
[ext_resource type="Texture2D" uid="uid://55j3rrvbi4rf" path="res://Assets/dogdeath3.png" id="22_ts5wt"]
[ext_resource type="Texture2D" uid="uid://df170sllrij3l" path="res://Assets/dogjump4.png" id="23_hseyt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_353vg"]
size = Vector2(23, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_dh5n1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dxdjh")
}, {
"duration": 1.0,
"texture": ExtResource("3_uit08")
}, {
"duration": 1.0,
"texture": ExtResource("4_hyoct")
}],
"loop": false,
"name": &"cat_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_w0qeo")
}, {
"duration": 1.0,
"texture": ExtResource("6_1imgx")
}],
"loop": false,
"name": &"cat_climb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ymqox")
}, {
"duration": 1.0,
"texture": ExtResource("8_jmvr7")
}, {
"duration": 1.0,
"texture": ExtResource("9_1a5of")
}, {
"duration": 1.0,
"texture": ExtResource("10_ochq3")
}],
"loop": false,
"name": &"cat_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_15wwq")
}, {
"duration": 1.0,
"texture": ExtResource("12_1dr3p")
}],
"loop": false,
"name": &"cat_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_wy3et")
}, {
"duration": 1.0,
"texture": ExtResource("14_4bwki")
}, {
"duration": 1.0,
"texture": ExtResource("15_0yoff")
}, {
"duration": 1.0,
"texture": ExtResource("16_7mpp7")
}],
"loop": false,
"name": &"cat_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_m5cmp")
}, {
"duration": 1.0,
"texture": ExtResource("3_h8567")
}, {
"duration": 1.0,
"texture": ExtResource("4_no411")
}],
"loop": false,
"name": &"catwalk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnchj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y0y1r"]
radius = 12.0

[sub_resource type="Theme" id="Theme_p6f27"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_jbiu6"]
default_font_size = 25

[sub_resource type="Theme" id="Theme_yb28x"]
default_font_size = 25

[sub_resource type="Animation" id="Animation_g8sku"]
resource_name = "ui_visibility"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver/Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0cw1p"]
_data = {
"ui_visibility": SubResource("Animation_g8sku")
}

[node name="CatPlayer" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 2
script = ExtResource("1_i1tag")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_353vg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5, -2.5)
sprite_frames = SubResource("SpriteFrames_dh5n1")
animation = &"catwalk"

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_mnchj")

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(24.5, -3)
shape = SubResource("CircleShape2D_y0y1r")

[node name="GameOver" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="Menu" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.34902, 0.486275, 0.956863, 1)

[node name="Container" type="ColorRect" parent="GameOver/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = 27.0
offset_right = -39.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.403922, 0.560784, 1, 1)

[node name="Border" type="ColorRect" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.501961, 0.670588, 1, 1)

[node name="Label" type="Label" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -252.0
offset_top = 80.0
offset_right = 252.0
offset_bottom = 122.0
grow_horizontal = 2
theme = SubResource("Theme_p6f27")
theme_override_colors/font_color = Color(0.533333, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.686275, 0, 0, 1)
theme_override_fonts/font = ExtResource("20_xvdpg")
theme_override_font_sizes/font_size = 40
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="TimeCompleted" type="ColorRect" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -95.0
offset_right = 50.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="GameOver/Menu/Container/TimeCompleted"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 215.0
offset_top = 10.0
offset_right = 551.0
offset_bottom = 51.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("20_xvdpg")
theme_override_font_sizes/font_size = 35
text = "Time: "

[node name="Label2" type="Label" parent="GameOver/Menu/Container/TimeCompleted"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -615.0
offset_top = 10.0
offset_right = -205.0
offset_bottom = 46.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("20_xvdpg")
theme_override_font_sizes/font_size = 30
text = "0	"

[node name="RestartButton" type="Button" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 256.0
offset_top = -295.0
offset_right = 828.0
offset_bottom = -205.0
grow_vertical = 0
theme = SubResource("Theme_jbiu6")
theme_override_fonts/font = ExtResource("20_xvdpg")
text = "Restart"

[node name="MenuButton" type="Button" parent="GameOver/Menu/Container"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 254.0
offset_top = -196.0
offset_right = 823.0
offset_bottom = -106.0
grow_vertical = 0
theme = SubResource("Theme_yb28x")
theme_override_fonts/font = ExtResource("20_xvdpg")
text = "Menu"

[node name="Sprite2D" type="Sprite2D" parent="GameOver/Menu/Container"]
position = Vector2(114, 539)
scale = Vector2(3.625, 2.79688)
texture = ExtResource("21_pyxd7")

[node name="Sprite2D2" type="Sprite2D" parent="GameOver/Menu/Container"]
position = Vector2(140.5, 378.625)
scale = Vector2(7.15625, 6.89844)
texture = ExtResource("8_jmvr7")

[node name="Sprite2D3" type="Sprite2D" parent="GameOver/Menu/Container"]
position = Vector2(947, 483)
scale = Vector2(7.15625, 6.89844)
texture = ExtResource("22_ts5wt")

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 2
visible = false

[node name="Menu" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.513726, 0.25098, 0.25098, 1)

[node name="ColorRect" type="ColorRect" parent="PauseMenu/Menu"]
layout_mode = 0
offset_left = 35.0
offset_top = 25.0
offset_right = 1113.0
offset_bottom = 605.0
color = Color(0.588235, 0.270588, 0.270588, 1)

[node name="Label" type="Label" parent="PauseMenu/Menu/ColorRect"]
layout_mode = 0
offset_left = 267.0
offset_top = 72.0
offset_right = 807.0
offset_bottom = 127.0
theme_override_fonts/font = ExtResource("20_xvdpg")
theme_override_font_sizes/font_size = 45
text = "Pause Menu"

[node name="ButtonResume" type="Button" parent="PauseMenu/Menu/ColorRect"]
layout_mode = 0
offset_left = 281.0
offset_top = 200.0
offset_right = 825.0
offset_bottom = 282.0
theme_override_fonts/font = ExtResource("20_xvdpg")
theme_override_font_sizes/font_size = 30
text = "Resume Level"

[node name="ButtonSave" type="Button" parent="PauseMenu/Menu/ColorRect"]
layout_mode = 0
offset_left = 278.0
offset_top = 295.0
offset_right = 823.0
offset_bottom = 374.0
theme_override_fonts/font = ExtResource("20_xvdpg")
theme_override_font_sizes/font_size = 35
text = "Save Level"

[node name="ButtonLoad" type="Button" parent="PauseMenu/Menu/ColorRect"]
layout_mode = 0
offset_left = 279.0
offset_top = 389.0
offset_right = 821.0
offset_bottom = 471.0
theme_override_fonts/font = ExtResource("20_xvdpg")
theme_override_font_sizes/font_size = 35
text = "Load Level"

[node name="ButtonQuit" type="Button" parent="PauseMenu/Menu/ColorRect"]
layout_mode = 0
offset_left = 275.0
offset_top = 486.0
offset_right = 822.0
offset_bottom = 565.0
theme_override_fonts/font = ExtResource("20_xvdpg")
theme_override_font_sizes/font_size = 35
text = "Quit Game"

[node name="Sprite2D" type="Sprite2D" parent="PauseMenu"]
position = Vector2(983.75, 207)
scale = Vector2(5.39062, 5.125)
texture = ExtResource("23_hseyt")

[node name="Sprite2D2" type="Sprite2D" parent="PauseMenu"]
position = Vector2(199, 520)
scale = Vector2(6.17187, 5.40625)
texture = ExtResource("5_w0qeo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_0cw1p")
}

[connection signal="pressed" from="GameOver/Menu/Container/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOver/Menu/Container/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/Menu/ColorRect/ButtonResume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="PauseMenu/Menu/ColorRect/ButtonSave" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="PauseMenu/Menu/ColorRect/ButtonLoad" to="." method="_on_button_load_pressed"]
[connection signal="pressed" from="PauseMenu/Menu/ColorRect/ButtonQuit" to="." method="_on_button_quit_pressed"]
